# jama-mcp-server

./: .env.example  .gitignore  DESIGN.md  README.md  bench_lyra_search.py  bootstrap.py  config.py  db_setup.py  download_bge_reranker.py  init_lyra.py  jama_client.py  monitor_lyra_init.py  net_guard.py  preflight.py  pyproject.toml  rag_pipeline.py  recall_no_rerank.py  recall_test.py  requirements.txt  selftest.py  server.py  setup_wizard.py  test_multiquery.py
