[project]
name = "jama-mcp-server"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Jama MCP Server — high-precision RAG + native REST query for Jama, CPU-only"

# All dependencies are CPU-only. The cross-encoder reranker and the bge
# embedding model both run on onnxruntime via fastembed — no torch/transformers,
# no CUDA. This keeps the install small (~600MB) and avoids the Windows
# c10.dll / WinError 1114 load failures that torch triggers.
dependencies = [
    # --- MCP framework (official Python SDK, exposes FastMCP) ---
    "mcp>=1.2.0",
    # --- HTTP / Jama REST client ---
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    # --- Storage engine ---
    # sqlite-vec ships prebuilt wheels on PyPI / GitHub releases.
    "sqlite-vec>=0.1.6",
    # FTS5 is bundled with CPython's sqlite3 module (no extra package needed).
    # --- LlamaIndex (SentenceSplitter + Document/TextNode for chunking) ---
    "llama-index-core>=0.11.0",
    # --- HTML cleaning for Jama rich-text fields ---
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # --- Local embedding + cross-encoder reranker (both ONNX via fastembed) ---
    # fastembed serves BOTH the bge-small-en-v1.5 embedding AND the
    # ms-marco-MiniLM-L-6-v2 cross-encoder reranker. TextCrossEncoder (the
    # reranker API) is stable from 0.7+.
    "fastembed>=0.7.0",
    # onnxruntime: shared by the embedding and reranker models. Pinned to
    # 1.20.1 — newer versions (1.27.0, what fastembed pulls on py3.13+)
    # depend on the new VC++ Runtime (vcruntime140_1.dll) absent on many
    # Windows machines, causing WinError 1114 DLL load failures. 1.20.1
    # loads cleanly on Windows and satisfies fastembed's constraint
    # (>=1.17.0, !=1.20.0) on py3.10-3.12.
    #
    # Python 3.13+ is intentionally NOT supported (requires-python <3.13):
    # it forces onnxruntime >=1.21, whose Windows builds hit the same VC++
    # DLL issue. Use Python 3.12 (the verified stable target).
    "onnxruntime==1.20.1",
    # --- Background incremental sync scheduler ---
    "APScheduler>=3.10.0",
    # APScheduler 3.x imports pkg_resources, removed in setuptools>=81.
    "setuptools<81",
    # --- Utilities ---
    "python-dotenv>=1.0.0",
]

[tool.uv]
# China mirror strategy: Tsinghua (TUNA) is the primary index (default=true);
# Tencent Cloud is the fallback. `first-index` forces uv to try the primary
# first and only fall back to the secondary when a package is missing there —
# this avoids uv querying both indexes in parallel (which causes timeouts when
# the secondary — here Tencent — is slow, even though the primary succeeded).
#
# PyPI (pypi.org) is intentionally NOT listed: from mainland China it is often
# unreachable and its inclusion caused `uv sync` to hang ~9min then fail with a
# download timeout. Both Tsinghua and Tencent mirror PyPI fully, so every
# package (including sqlite-vec's GitHub-only wheels, which both mirrors
# proxy) is available without hitting pypi.org directly.
index-strategy = "first-index"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
